Fix Overflow and Icons

--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -22,47 +22,59 @@ body {
 
 .icon {
 	position: absolute;
-	left: max(calc(200px * 3), 100%);
+	left: max(calc(200px * 3.7), 100%);
 	animation-name: scroll-left;
-	animation-duration: 30s;
+	animation-duration: 25s;
 	animation-timing-function: linear;
 	animation-iteration-count: infinite;
 }
 
 .icon-1 {
-	animation-delay: calc(30s / 9 * (9 - 1) * -1);
+	animation-delay: calc(25s / 12 * (12 - 1) * -1);
 }
 
 .icon-2 {
-	animation-delay: calc(30s / 9 * (9 - 2) * -1);
+	animation-delay: calc(25s / 12 * (12 - 2) * -1);
 }
 
 .icon-3 {
-	animation-delay: calc(30s / 9 * (9 - 3) * -1);
+	animation-delay: calc(25s / 12 * (12 - 3) * -1);
 }
 
 .icon-4 {
-	animation-delay: calc(30s / 9 * (9 - 4) * -1);
+	animation-delay: calc(25s / 12 * (12 - 4) * -1);
 }
 
 .icon-5 {
-	animation-delay: calc(30s / 9 * (9 - 5) * -1);
+	animation-delay: calc(25s / 12 * (12 - 5) * -1);
 }
 
 .icon-6 {
-	animation-delay: calc(30s / 9 * (9 - 6) * -1);
+	animation-delay: calc(25s / 12 * (12 - 6) * -1);
 }
 
 .icon-7 {
-	animation-delay: calc(30s / 9 * (9 - 7) * -1);
+	animation-delay: calc(25s / 12 * (12 - 7) * -1);
 }
 
 .icon-8 {
-	animation-delay: calc(30s / 9 * (9 - 8) * -1);
+	animation-delay: calc(25s / 12 * (12 - 8) * -1);
 }
 
 .icon-9 {
-	animation-delay: calc(30s / 9 * (9 - 9) * -1);
+	animation-delay: calc(25s / 12 * (12 - 9) * -1);
+}
+
+.icon-10 {
+	animation-delay: calc(25s / 12 * (12 - 10) * -1);
+}
+
+.icon-11 {
+	animation-delay: calc(25s / 12 * (12 - 11) * -1);
+}
+
+.icon-12 {
+	animation-delay: calc(25s / 12 * (12 - 12) * -1);
 }
 
 ::selection {
